tests/samples/negative/types/array_size_overflow.ax
module array_size_overflow;

struct S {
  data: [9223372036854775808]u16;
}

fn main() -> i32 {
  return ((sizeof<S>()) as i32);
}
